# PataNgoma-AudioTagger-tool

./: .auth  .env  .gitignore  PULL_REQUEST_TEMPLATE.md  README.md  albums.json  client.py  cpy  datastore.json  get.sh  main.py  pata.py  pyproject.toml  requirements.txt  results.json  track.yaml
.github/: dependabot.yml
app/: console.py  main_cli.py
app/api/: mb.py
app/db/: database.py
app/models/: album.py  album_artwork.py  data_store.py  id_extractor.py  query.py  tags.py  track.py
docs/: index.html  index.html_bac
drafts/: 0x00-additions.md  0x00-relationships.puml  As_dict.py  as_dict.json  as_dict.yaml  baseModel.py  console.py  db.py  foo.py  main.py  metadata.py  models.py  music_cli.py  tuto.db  tutorial.db  tutorials.db
drafts/0x01-cli/: 1-spotipy.py  albums.json  client.py  results.json  spotipy_test.py  track.json  track.yaml
drafts/0x02-cli/: main.py  mediafile.py  tags.py  types.txt  updates.py  updates2.py  utils.py
drafts/0x03-cli/: main.py  metadata.py  musicbrainz_api.py  tags.py  updates.py  updates2.py  utils.py
drafts/0x04-cli/: 0-console.py  0-main.py  0-sp.py  1-console.py  1-file_paths.py  1-options.py  README.md  cli.py  console.py  cpy.py  data_store.py  datastore.json  fig.py  filestorage.py  inq_paths.py  interactive.py  mb.py  pata  pyproject.toml  query.py  query_spotify.py  tags.py  valid_feilds.py  valid_fields.py  valid_fields.txt  version.py
drafts/0x05-all/: 0-dz.py  0-foo.py  1-csl.py  1-dz.py  data_store.py  datastore.json  datastore.yaml  filestorage.py  main.py  mb.py  query.py  query_spotify.py  (+2 more)
src/: main.py
(+51 files in other folders)
